[project]
name = "Ad-Compliance-AI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.14",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.4",
    "pinecone-client>=6.0.0",
    "pydantic>=2.12.5",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
